@@ -1,6 +1,6 @@
 
   OpenSSL STATUS                           Last modified at
-  ______________                           $Date: 2002/07/30 10:38:17 $
+  ______________                           $Date: 2002/08/02 11:36:42 $
 
   DEVELOPMENT STATE
 
